<resources>
    <string name="app_name">E-Cart App</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="lets_shopping">LET\'S SHOPPING</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account_text">Create An Account? Sign Up</string>
    <string name="user_name_text">User Name</string>
    <string name="already_have_account_text">Already have An Account? Sign In</string>
    <string name="submit">Submit</string>
    <string name="enter_email_text">Please enter your email address and we\'ll send you a link to reset your password</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>

    <string name="nav_home">Home</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_weekly_specials">Weekly Specials</string>
    <string name="nav_offers">Offers</string>
    <string name="nav_new_products">New Products</string>
    <string name="nav_popular_products">Popular Products</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_products">Products</string>
    <string name="nav_search">Search</string>
    <string name="nav_my_order">My Order</string>
    <string name="nav_my_cart">My Cart</string>
    <string name="nav_check_out">Checkout</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_share">Share</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_faqs">FAQ\'s</string>
    <string name="nav_log_out">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="all_categories">All Categories</string>
    <string name="shop_now">Shop Now</string>
    <string name="english">English</string>
    <string name="tamil">தமிழ்</string>
    <string name="feel_free_text">Feel Free To Drop Us A Message!</string>
    <string name="send">Send</string>
    <string name="name_text">Your Name</string>
    <string name="message">Your Message</string>
    <string name="lorem_text">Lorem ipsum is simply dummy text!</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="pending">PENDING</string>
    <string name="completed">COMPLETED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="date_and_time"><![CDATA[DATE & TIME]]></string>
    <string name="address_caps">ADDRESS</string>
    <string name="payment">PAYMENT</string>
    <string name="next_step">Next Step</string>
    <string name="your_address_one">Your Address 1</string>
    <string name="your_address_two">Your Address 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="date">Delivery Date (DD MMM. YYYY)</string>
    <string name="time">Delivery Time (hh:mm A)</string>
    <string name="finish_order">Finish Your Order</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date*</string>
    <string name="cvc">CVC*</string>
    <string name="card_name">Card Holder Name</string>
    <string name="cod">Cash On Delivery</string>
    <string name="card_text">Credit/Debit Card</string>
    <string name="paypal">Paypal</string>
    <string name="lorem_text_dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="change_language">Change Language</string>
    <string name="arabic">Arabic</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="portugues">Portuguese</string>
    <string name="chinese">Chinese</string>
    <string name="notification">Notification</string>
    <string name="receive_offers">Receive special offers</string>
    <string name="get_updates">Get update on your order status</string>
    <string name="support_us">Support Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="list">LIST</string>
    <string name="grid">GRID</string>
    <string name="zero">0</string>

    <string-array name="nav_item_activity_titles">
        <item>@string/nav_home</item>
        <item>@string/nav_my_profile</item>
        <item>@string/nav_weekly_specials</item>
        <item>@string/nav_offers</item>
        <item>@string/nav_new_products</item>
        <item>@string/nav_popular_products</item>
        <item>@string/nav_categories</item>
        <item>@string/nav_products</item>
        <item>@string/nav_search</item>
        <item>@string/nav_my_order</item>
        <item>@string/nav_my_cart</item>
        <item>@string/nav_check_out</item>
        <item>@string/nav_settings</item>
        <item>@string/nav_rate_us</item>
        <item>@string/nav_share</item>
        <item>@string/nav_about_us</item>
        <item>@string/nav_contact_us</item>
        <item>@string/nav_faqs</item>
        <item>@string/nav_log_out</item>
    </string-array>
</resources>
