<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        fontPath="fonts/nova-bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/forget_password"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        tools:ignore="MissingPrefix" />

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeader"
        android:layout_marginTop="70dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            fontPath="fonts/nova.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/enter_email_text"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            tools:ignore="MissingPrefix" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tILEmail"
            fontPath="fonts/nova.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusedByDefault="false"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/MyTextAppearance"
            tools:ignore="UnusedAttribute">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEmail"
                fontPath="fonts/nova.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:drawableLeft="@drawable/ic_email_green_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email_green_24dp"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:textCursorDrawable="@drawable/cursor"
                tools:ignore="LabelFor,MissingPrefix,RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            fontPath="fonts/nova-bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            tools:ignore="MissingPrefix" />

    </LinearLayout>
</RelativeLayout>