<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="2">

    <RelativeLayout
        android:id="@+id/rlSignInSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <ImageView
            android:id="@+id/img_pager_item"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llSignInSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignIn"
            fontPath="fonts/nova-bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/btnSignUp"
            fontPath="fonts/nova-bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            tools:ignore="MissingPrefix" />
    </LinearLayout>
</LinearLayout>